--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,16 @@
             android:name="AA_MODELS"
             android:value="by.verus.criminalintent.Crime" />
 
-        <activity android:name=".CrimeActivity">
+        <activity android:name=".CrimeListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".CrimeActivity" />
+
     </application>
 
 </manifest>
