--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         </activity>
 
         <activity android:name=".activity.CrimeActivity" />
+        <activity android:name=".activity.CrimePagerActivity"/>
 
     </application>
 
